
Fix bug in populating objects from a hashref.  This was causing
configuration data to be retrievable only in array form.
----------------------------------------------------------------------
Mon Aug 15 18:14:36 2011                        Michael Jennings (mej)

Work in progress:  Util.pm tests
----------------------------------------------------------------------
Tue Aug 16 09:54:03 2011                        Michael Jennings (mej)

This should fix the index generation.  Don't have unit tests for the
ObjectSet yet, so I can't say for sure....  :-)
----------------------------------------------------------------------
Tue Aug 16 16:15:52 2011                        Michael Jennings (mej)

More work on the Util.pm tests.
----------------------------------------------------------------------
Wed Aug 17 17:36:31 2011                        Michael Jennings (mej)

More work on Util.pm tests.  We're up to an even 1600 unit tests after
only 5 test sets and have already found and fixed a number of issues.
----------------------------------------------------------------------
Thu Aug 18 17:59:01 2011                        Michael Jennings (mej)

I couldn't find a reasonable way to generate tainted data, and I can't
think of a way to test examine_object(), so Util.pm tests are done.
Next is Logger, then Object.
----------------------------------------------------------------------
Fri Aug 19 17:29:29 2011                        Michael Jennings (mej)

An even 1700 tests sounds like a good stopping point for the weekend.
Logger tests are done, now working on Object tests.
----------------------------------------------------------------------
Fri Aug 26 18:08:03 2011                        Michael Jennings (mej)

Object tests are finally done.  I think I've got full coverage now,
and several bugs were fixed that hadn't appeared yet.  Now at 1774
tests.
----------------------------------------------------------------------